--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </button>
             <div id="links-container">
                     <a class="nav-link" href="/">Inicio</a>
-                    <a class="nav-link" href="/tags">Task</a>  
+                    <a class="nav-link" href="/tasks/index.html">Task</a>  
             </div>
         </div>
     </nav>
@@ -30,7 +30,7 @@
         <h1 id="main-title">TaskApp</h1>
         <div id="main-desc-container">
             <p id="main-desc-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint corrupti velit asperiores veniam, praesentium alias laborum labore recusandae voluptate cupiditate. Optio eum, quasi nemo praesentium illum quaerat porro recusandae debitis.</p>
-            <button id="main-desc-btn">Comenzar Ya</button>
+            <a id="main-desc-btn" href="/tasks/index.html">Comenzar Ya</a>
         </div>
 
 
