--- a/tasks/index.html
+++ b/tasks/index.html
@@ -24,7 +24,7 @@
             </button>
             <div id="links-container">
                     <a class="nav-link" href="/">Inicio</a>
-                    <a class="nav-link" href="/tags">Tags</a>  
+                    <a class="nav-link" href="/tasks/index.html">Task</a>  
             </div>
         </div>
     </nav>
