--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ion-icon id="nav-menu-btn-icon" name="reorder-three-outline"></ion-icon>
             </button>
             <div id="links-container">
-                    <a class="nav-link" href="/">Inicio</a>
+                    <a class="nav-link" href="index.html">Inicio</a>
                     <a class="nav-link" href="tasks/index.html">Task</a>  
             </div>
         </div>
