--- a/tasks/task.html
+++ b/tasks/task.html
@@ -23,8 +23,8 @@
                 <ion-icon id="nav-menu-btn-icon" name="reorder-three-outline"></ion-icon>
             </button>
             <div id="links-container">
-                    <a class="nav-link" href="index.html">Inicio</a>
-                    <a class="nav-link" href="./index.html">Task</a>  
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="task.html">Task</a>  
             </div>
         </div>
     </nav>
